# clapse

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  main.rs
src/app/: help.rs  mod.rs  search.rs  span.rs  unit.rs  view.rs
src/app/tabs/: flamegraph.rs  mod.rs  sources.rs  templates.rs
src/traces/: event.rs  file.rs  mod.rs
src/widgets/: color.rs  duration_range.rs  flame_graph.rs  flamegraph.rs  graph_span.rs  help.rs  mod.rs  pch_candidates.rs  search.rs  span.rs  span_details.rs  start_screen.rs  time_range.rs  track.rs  unit.rs
test/: extract_types.ts
test/data/: irods_configuration_parser.cpp.json  target.cpp.json
