[package]
name = "clapse"
version = "0.1.0"
description = "C++ build profiling and analysis tool"
authors = ["Mouaadh KELLAL <mouaadh@fasterbuild.cc>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true


